--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.166.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.5.3",
     "vite": "^5.3.3"
   }
